scss/partials/_fullscreen_post.scss
div.fullscreen-post-container {
  position: absolute;
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100vw;
  min-height: 100vh;
  background-color: $oc_gray_8;
  z-index: #{$navbar_zindex + 100};
  overflow-y: auto;
  height: 100vh;
  transition: opacity 180ms ease-in;

  @include tablet() {
    position: initial;
    width: 100%;
    height: initial;
    padding-top: 64px;
    top: unset;
    left: unset;
    background-color: white;
  }

  &.will-appear {
    opacity: 0;
  }

  &.appear {
    opacity: 1;
  }

  &.editing {
    div.fullscreen-post-header {
      button.mobile-modal-close-bt {
        @include image-2x("/img/ML/fullscreen_closing_x");
        background-size: 14px 14px;
      }
      div.header-title-container {
        opacity: 0;
      }
      div.header-title-editing-post {
        opacity: 1;
      }
    }
  }

  div.fullscreen-post-header {
    position: absolute;
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100vw;
    height: 64px;
    background-color: white;
    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
    padding: 24px;
    z-index: #{$navbar_zindex + 101};

    @include tablet() {
      width: 100%;
    }

    button.mobile-modal-close-bt {
      @include image-2x("/img/ML/fullscreen_back_arrow");
      width: 24px;
      height: 24px;
      background-repeat: no-repeat;
      background-size: 20px 15px;
      background-position: center;
      padding: 0;
      margin: -4px 0px 0px;
      float: left;
      transition: background-image 180ms easi-in;
    }

    div.header-title-editing-post {
      margin: 0px auto;
      width: auto;
      position: absolute;
      left: 50%;
      width: 105px;
      margin-left: -52px;
      opacity: 0;
      transition: opacity 180ms ease-in;

      div.header-title-container-edit-pen {
        float: left;
        width: 16px;
        height: 16px;
        @include image-2x("/img/ML/editing_pen");
        background-size: 16px 16px;
        background-position: center;
        background-repeat: no-repeat;
      }

      div.header-title-container-edit-title {
        @include avenir_H();
        font-size: 18px;
        color: $deep_navy;
        margin-left: 24px;
        margin-top: -2px;
      }
    }

    div.header-title-container {
      margin: 0px auto;
      width: auto;
      opacity: 1;
      position: absolute;
      left: 50%;
      transition: opacity 180ms ease-in;

      @include tablet() {
        position: relative;
        left: unset;
        width: 70%;
        margin: 0px auto;
        text-align: center;
      }

      @include activity-author(32);

      div.user-avatar-img-container {
        float: left;
        margin-top: -8px;
        margin-right: 0px;

        @include tablet() {
          display: none;
        }
      }

      div.header-title {
        float: left;
        margin-left: 8px;
        @include avenir_H();
        font-size: 14px;
        color: $deep_navy;
        max-width: 50vw;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        word-wrap: break-word;

        @include tablet() {
          margin-left: 0px;
          max-width: initial;
          width: 100%;
        }
      }

      div.header-timing {
        @include avenir_M();
        font-size: 14px;
        color: rgba($ui_grey, 0.5);
        margin-left: 8px;
        float: left;
        margin-top: 1px;

        @include tablet() {
          display: none;
        }
      }
    }

    div.fullscreen-post-header-right {
      position: absolute;
      top: 24px;
      right: 24px;

      button.post-publish-bt {
        position: absolute;
        top: -12px;
        right: 0px;
        width: 164px;
        height: 40px;
        padding: 8px 24px 8px 52px;
        border-radius: 100px;
        background-color: $carrot_green;
        color: white;
        @include avenir_H();
        font-size: 14px;
        transition: opacity 180ms ease-in;

        &.loading {
          &:before {
            background-size: 20px 20px;
            background-image: cdnUrl("/img/small_loading.gif");
          }
        }

        &:before {
          content: "";
          @include image-2x("/img/ML/post_publish");
          background-size: 20px 20px;
          background-position: center;
          background-repeat: no-repeat;
          position: absolute;
          width: 20px;
          height: 20px;
          left: 24px;
          top: 10px;
        }
      }
    }
  }

  &.editing {
    div.fullscreen-post {
      div.fullscreen-post-left-column {
        left: 170px;
      }

      div.fullscreen-post-right-column {
        opacity: 0;
        pointer-events: none;
      }
    }
  }

  div.fullscreen-post {
    margin: 100px auto 32px;
    width: 1060px;
    position: relative;
    min-height: calc(100vh - 132px);
    height: auto;

    @include tablet() {
      margin: 0px auto 32px;
      width: 100%;
      min-height: initial;
      box-shadow: none;
      border: none;
      padding: 0px;
      background-color: white;
    }

    div.fullscreen-post-author-header {
      display: none;

      @include tablet() {
        display: block;
        height: 64px;
        background-color: $light_tan;
        padding: 16px 24px;

        @include activity-author(32);

        div.user-avatar-img-container {
          float: left;
        }

        div.fullscreen-post-author-header-title {
          margin-left: 48px;
          @include avenir_H();
          font-size: 14px;
          color: $deep_navy;
        }

        div.fullscreen-post-author-header-subtitle {
          margin-left: 48px;
          @include avenir_M();
          font-size: 12px;
          color: $ui_grey;
        }
      }
    }

    div.fullscreen-post-left-column {
      width: 720px;
      position: relative;
      left: 0px;
      top: 0px;
      transition: left 180ms ease-in;

      @include tablet() {
        width: 100%;
        left: unset;
        top: unset;
      }

      div.fullscreen-post-left-column-content {
        box-shadow: 0px 2px 4px rgba($deep_tan, 0.5);
        background-color: white;
        border-radius: 6px;
        padding: 40px;

        @include tablet() {
          box-shadow: none;
          border-radius: 0px;
          padding: 32px 24px 0px;
        }

        div.fullscreen-post-box-content-board {
          @include avenir_M();
          font-size: 14px;
          color: $ui_grey;
        }

        div.fullscreen-post-box-content-headline {
          @include activity-headline();

          @include avenir_H();
          font-size: 28px;
          color: $deep_navy;
          line-height: 36px;
          margin-top: 16px;
          cursor: text;
          outline: none;
        }

        div.rich-body-editor-container {
          position: relative;
          overflow: visible;

          div.medium-editor-media-picker {
            margin-top: 0px;
            margin-left: -26px;
            top: 0px;
          }

          div.rich-body-editor {
            border: none;
            outline: none;
            margin: 24px 0px 0px;
            cursor: text;
            min-height: 85px;
            @include activity-body(18);
            color: $deep_navy;
            @include avenir_BOOK();
            font-size: 18px;
            line-height: 30px;

            p:not(:last-child) {
              margin: 16px 0px;
            }

            div.carrot-no-preview, a.carrot-no-preview {
              display: none;
            }

            &.medium-editor-placeholder:after {
              color: $deep_navy !important;
            }

            &:after {
              margin: 0;
            }
          }
        }

        div.fullscreen-post-box-content-body {
          @include activity-body(18);

          @include avenir_BOOK();
          font-size: 18px;
          color: $deep_navy;
          line-height: 30px;
          margin-top: 32px;

          div.carrot-no-preview, a.carrot-no-preview {
            display: none;
          }
        }

        div.fullscreen-post-box-footer {
          margin-top: 32px;

          div.fullscreen-post-box-footer-editing {
            div.fullscreen-post-box-footer-multi-picker {
              float: left;
            }

            div.emoji-picker {
              float: left;
              margin-left: 16px;

              button.emoji-button {
                width: 20px;
                height: 20px;
                background-position: 0px 0px;
                padding: 0px;
                position: absolute;
                top: 0px;
                left: 0px;
                cursor: pointer;
              }

              @include mobile() {
                display: none;
              }

              div.picker-container {
                left: -8px;
              }
            }

            div.fullscreen-post-box-footer-legend-container {
              float: left;
              margin-left: 16px;
              position: relative;

              button.fullscreen-post-box-footer-legend-trigger {
                width: 20px;
                height: 20px;
                @include image-2x("/img/ML/new_post_legend_button");
                background-repeat: no-repeat;
                background-size: 20px 20px;
                background-position: 0px 0px;
                cursor: pointer;
                position: absolute;
                top: 0px;
                left: 0px;
              }

              div.fullscreen-post-box-footer-legend-image {
                position: absolute;
                top: -283px;
                left: -8px;
                width: 212px;
                height: 281px;
                @include image-2x("/img/ML/new_post_legend");
                background-size: 212px 281px;
                background-position: center;
                background-repeat: no-repeat;
              }
            }
          }
        }
      }
    }

    div.fullscreen-post-right-column {
      width: 300px;
      position: fixed;
      top: 100px;
      height: calc(100vh - 132px);
      transition: opacity 180ms ease-in;

      @include tablet() {
        width: 100%;
        left: unset;
        top: unset;
        position: relative;
        margin-top: 24px;
        padding: 0px 24px;
        height: auto;
        background-color: white;
      }

      &.no-comments {
        div.stream-comments {
          height: 100%;
        }
      }

      div.add-comment-box-container {
        div.add-comment-box {
          div.emoji-picker {
            div.picker-container {
              top: unset !important;
              right: 0px !important;
            }
          }
        }
      }

      &.add-comment-focused {
        div.stream-comments {
          max-height: calc(100% - 132px);

          @include tablet() {
            max-height: initial;
          }
        }
      }

      div.stream-comments {
        margin-top: 16px;
        max-height: calc(100% - 64px);

        @include tablet() {
          background-color: white;
        }

        &:before {
          @include top-gradient($oc_gray_8);
        }

        @include tablet() {
          max-height: initial;

          &:before {
            @include top-gradient(white);
          }
        }

        div.stream-comments-inner {
          padding-top: 16px;
        }
      }

      div.add-comment-box-container {
        padding-right: 12px;
        padding-top: 0px;

        @include tablet() {
          padding-right: 0px;
        }
      }
    }
  }
}

