Avoid saving posts with empty title. Fix header alignment.

--- a/scss/partials/_fullscreen_post.scss
+++ b/scss/partials/_fullscreen_post.scss
@@ -53,7 +53,7 @@ div.fullscreen-post-container {
     height: 64px;
     background-color: white;
     box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
-    padding: 24px;
+    padding: 12px 24px;
     z-index: #{$navbar_zindex + 101};
 
     @include tablet() {
@@ -68,7 +68,7 @@ div.fullscreen-post-container {
       background-size: 20px 15px;
       background-position: center;
       padding: 0;
-      margin: -4px 0px 0px;
+      margin: 8px 0px 0px;
       float: left;
       transition: background-image 180ms easi-in;
     }
@@ -82,6 +82,7 @@ div.fullscreen-post-container {
       margin-left: -52px;
       opacity: 0;
       transition: opacity 180ms ease-in;
+      margin-top: 12px;
 
       div.header-title-container-edit-pen {
         float: left;
@@ -109,6 +110,7 @@ div.fullscreen-post-container {
       position: absolute;
       left: 50%;
       transition: opacity 180ms ease-in;
+      margin-top: 12px;
 
       @include tablet() {
         position: relative;
@@ -165,12 +167,16 @@ div.fullscreen-post-container {
 
     div.fullscreen-post-header-right {
       position: absolute;
-      top: 24px;
+      top: 20px;
       right: 24px;
+
+      div.more-menu {
+        margin-top: 0px;
+      }
 
       button.post-publish-bt {
         position: absolute;
-        top: -12px;
+        top: -8px;
         right: 0px;
         width: 164px;
         height: 40px;
